--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "torchvision>=0.19.1",
     "lightning>=2.4.0",
     "av>=13.0.0",
+    "albumentations>=1.4.15",
+    "wandb>=0.18.1",
+    "rich>=13.8.1",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
